# OpenDeck

./: package.json
plugins/com.amansprojects.starterpack.sdPlugin/: Cargo.toml  build.ts
plugins/com.amansprojects.starterpack.sdPlugin/assets/: manifest.json
plugins/com.amansprojects.starterpack.sdPlugin/assets/propertyInspector/: sdpi.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/bundle/: 40-streamdeck.rules  opendeck.metainfo.xml
src-tauri/icons/: icon.icns
src-tauri/src/: elgato.rs  main.rs
src-tauri/src/events/outbound/: will_appear.rs
src/components/: ActionList.svelte  DeviceView.svelte  InstanceEditor.svelte  Key.svelte  PluginDetails.svelte  PluginManager.svelte  SettingsView.svelte
src/routes/: +page.svelte
