[package]
name = "opendeck-starterpack"
authors = ["Aman Khanna (nekename)"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
openaction = "1.1"
log = "0.4"
simplelog = "0.12"
serde = "1.0"
serde_json = "1.0"
ron = "0.10"
enigo = { version = "0.5", features = ["serde", "x11rb", "wayland", "libei"] }
tokio = { version = "1.45", features = ["full"] }
os_pipe = "1.2"
